# games

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  start-display.sh
.githooks/: pre-commit
.github/workflows/: docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  ecs_engine.md  introduction.md
docs/src/games/: leah_village.md  path_of_gu.md  tic_tac_toe.md
ecs_engine/: CMakeLists.txt  command_buffer.hpp  ecs.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  event_queue.hpp  registry.hpp  system.cpp  system.hpp  thread_pool.hpp  world.cpp  world.hpp
ecs_engine/detail/: command_buffer.hpp  entity.hpp  event_queue.hpp  registry.hpp  system.hpp  thread_pool.hpp
ecs_engine/src/: entity.cpp
ecs_engine/tests/: CMakeLists.txt  test_scheduler.cpp
game1/: CMakeLists.txt
game1/src/: main.cpp
game1/tests/: CMakeLists.txt
include/: pair.hpp
leah_village/: CMakeLists.txt
leah_village/include/: actions.hpp  assets.hpp  game.hpp  input.hpp  renderer.hpp
leah_village/include/components/: boost.hpp  builder.hpp  building.hpp  construction.hpp  experience.hpp  level.hpp  locked.hpp  map_location.hpp  obstacle.hpp  pending_xp.hpp  player.hpp  population.hpp  position.hpp  resource_producer.hpp  resource_storage.hpp  selected.hpp  timer.hpp  upgrade_cost.hpp
leah_village/include/persistence/: save_load.hpp
leah_village/include/systems/: boost_system.hpp  build_system.hpp  extract_system.hpp  level_up_system.hpp  produce_system.hpp
leah_village/include/world/: map.hpp  world.hpp
leah_village/src/: actions.cpp  assets.cpp  game.cpp  input.cpp  render.cpp  spawn.cpp
leah_village/src/persistence/: save_load.cpp
leah_village/src/systems/: boost_system.cpp  build_system.cpp  extract_system.cpp  level_up_system.cpp  produce_system.cpp
leah_village/src/world/: map.cpp  world.cpp
leah_village/tests/: CMakeLists.txt  test.cpp
path_of_gu/: CMakeLists.txt
path_of_gu/include/: game.hpp
path_of_gu/include/actions/: combat.hpp  loot.hpp
path_of_gu/include/components/: ai_behavior.hpp  attack_effect.hpp  cultivation_rank.hpp  position.hpp
path_of_gu/include/input/: parser.hpp
path_of_gu/include/rendering/: render.hpp
path_of_gu/include/systems/: ai_system.hpp  combat_system.hpp  effect_system.hpp  loot_system.hpp  movement_system.hpp  render_system.hpp
path_of_gu/include/world/: map.hpp  world.hpp
path_of_gu/src/: game.cpp
path_of_gu/src/actions/: combat.cpp  loot.cpp
path_of_gu/src/rendering/: render.cpp
path_of_gu/src/systems/: ai_system.cpp  combat_system.cpp  effect_system.cpp  loot_system.cpp  movement_system.cpp  render_system.cpp
path_of_gu/src/world/: world.cpp
path_of_gu/tests/: CMakeLists.txt  test_combat.cpp  test_ecs.cpp  test_event_queue.cpp  test_items.cpp  test_loot.cpp
pathofgu/: CMakeLists.txt  plan.md
pathofgu/include/: game.hpp  utility.hpp
pathofgu/include/components/: aperture.hpp  attack_effect.hpp  health.hpp  loot.hpp  move_intent.hpp  position.hpp  primeval_essence.hpp  self_effect.hpp  stats.hpp
pathofgu/include/ecs/: registry.hpp
pathofgu/include/events/: events.hpp
pathofgu/include/input/: input_thread.hpp
pathofgu/include/items/: gu_worm.hpp  gu_worm_db.hpp
pathofgu/include/systems/: ai_system.hpp  combat_system.hpp  effect_system.hpp  loot_system.hpp  movement_system.hpp  render_system.hpp
pathofgu/include/world/: map.hpp  room.hpp  world.hpp
pathofgu/src/: game.cpp  main.cpp  utility.cpp
pathofgu/src/ecs/: entity.cpp
pathofgu/src/input/: input_thread.cpp  parser.cpp
pathofgu/src/items/: gu_worm_db.cpp
pathofgu/src/systems/: ai_system.cpp  combat_system.cpp  loot_system.cpp  movement_system.cpp  render_system.cpp
pathofgu/src/world/: world.cpp
pathofgu/tests/: CMakeLists.txt  test_combat.cpp  test_ecs.cpp  test_event_queue.cpp  test_items.cpp  test_loot.cpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
tic_tac_toe/: CMakeLists.txt
tic_tac_toe/include/: state.hpp
tic_tac_toe/src/: main.cpp
tic_tac_toe/tests/: CMakeLists.txt  test.cpp
tictactoe/: CMakeLists.txt
tictactoe/src/: main.cpp  state.cpp
tictactoe/tests/: CMakeLists.txt  test.cpp
zzz_template/: CMakeLists.txt
zzz_template/src/: main.cpp
zzz_template/tests/: CMakeLists.txt
